--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@twurple/auth": "^5.3.4",
     "@twurple/chat": "^5.3.4",
     "dotenv": "^16.0.3",
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "redis": "^4.6.4"
   }
 }
