--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -5,7 +5,7 @@
         "script": "./main.ts",
         "interpreter": "deno",
         "time": true,
-        "interpreterArgs": "run --allow-read --allow-write --allow-net --allow-env"
+        "interpreterArgs": "run --allow-read --allow-write --allow-net --allow-env --allow-run"
       }
     ]
 }
