--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,21 +1,39 @@
 name: Release
 
 on:
-  push:
-    branches:
-      - master
-    # Only run when the commit message contains "Bump version"
-    paths-ignore:
-      - README.md
-      - '*.md'
-    # The following assumes that the commit message is in the first line of the commit message.
-    # If the commit message is multiline, you may need to adjust the pattern below.
-    # For more information, see https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#filter-pattern-cheat-sheet
-    if: 'contains(github.event.head_commit.message, "Bump version")'
+  workflow_dispatch:
+   inputs:
+     release_tag:
+        description: 'Release Tag'     
+        required: true
+        default: '1.0.0'
 
 jobs:
+  create-release:
+    runs-on: ubuntu-20.04
+    
+    steps:
+      - name: Create a Release
+        id: create_release
+        uses: actions/create-release@v1.1.4
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          # The name of the tag. This should come from the webhook payload, `github.GITHUB_REF` when a user pushes a new tag
+          tag_name: ${{ github.event.inputs.release_tag }}
+          # The name of the release. For example, `Release v1.0.1`
+          release_name: ${{ github.event.inputs.release_tag }}
+      - shell: bash
+        run: |
+          expr "${{ steps.create_release.outputs.upload_url }}" > upload_url.txt
+      - name: Upload URL
+        uses: actions/upload-artifact@v2
+        with:
+          name: upload_url
+          path: upload_url.txt
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    needs: [create-release]
 
     steps:
       - name: Checkout code
@@ -34,44 +52,46 @@ jobs:
 
       - name: Build for linux
         run: deno compile --allow-read --allow-write --allow-net --allow-env --allow-run --target x86_64-unknown-linux-gnu -o pieront-linux main.ts
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Zip Windows CLI
+        uses: vimtor/action-zip@v1
         with:
-          tag_name: ${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-          draft: false
-          prerelease: false
+          files: pieront-windows.exe
+          dest: pieront-${{ github.event.inputs.release_tag }}-windows.zip
+      
+      - name: Zip Linux CLI
+        uses: vimtor/action-zip@v1
+        with:
+          files: pieront-linux
+          dest: pieront-${{ github.event.inputs.release_tag }}-linux.zip
 
-      - name: Upload Release Assets
-        id: upload-release-assets
+      - name: Download URL
+        uses: actions/download-artifact@v2
+        with:
+          name: upload_url
+        
+      - name: Read URL
+        id: url
+        uses: juliangruber/read-file-action@74dc4b4435b60f96f84bcba916659c779f46ba0a
+        with:
+          path: upload_url.txt
+
+      - name: Upload Windows CLI Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./pieront-linux
-          asset_name: pieront-linux
-          asset_content_type: application/javascript
-      - uses: actions/upload-release-asset@v1
+          upload_url: ${{ steps.url.outputs.content }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: pieront-${{ github.event.inputs.release_tag }}-windows.zip
+          asset_name: pieront-${{ github.event.inputs.release_tag }}-windows.zip
+          asset_content_type: application/zip
+
+      - name: Upload Linux CLI Release Asset
+        uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./pieront-windows.exe
-          asset_name: pieront-windows.exe
-          asset_content_type: application/javascript
-
-      - name: Zip source code
-        run: |
-          zip -r source.zip .
-        shell: bash
-
-      - name: Upload Source Code
-        uses: actions/upload-artifact@v2
-        with:
-          name: source-code
-          path: source.zip
+          upload_url: ${{ steps.url.outputs.content }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: pieront-${{ github.event.inputs.release_tag }}-linux.zip
+          asset_name: pieront-${{ github.event.inputs.release_tag }}-linux.zip
+          asset_content_type: application/zip
