--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@
 name: Build and Upload Release
  
 on: 
- workflow_dispatch:
-   inputs:
+  workflow_dispatch:
+    inputs:
       release_tag:
         description: 'Release Tag'     
         required: true
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Create a Release
         id: create_release
-        uses: actions/create-release@v1
+        uses: actions/create-release@v1.1.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -27,8 +27,9 @@ jobs:
       - shell: bash
         run: |
           expr "${{ steps.create_release.outputs.upload_url }}" > upload_url.txt
+      
       - name: Upload URL
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: upload_url
           path: upload_url.txt
@@ -54,18 +55,6 @@ jobs:
 
       - name: Build for linux
         run: deno compile --allow-read --allow-write --allow-net --allow-env --allow-run --target x86_64-unknown-linux-gnu -o pieront-linux main.ts
-      
-      - name: Zip Windows CLI
-        uses: vimtor/action-zip@v1
-        with:
-          files: pieront-windows.exe
-          dest: pieront-${{ github.event.inputs.release_tag }}-windows.zip
-      
-      - name: Zip Linux CLI
-        uses: vimtor/action-zip@v1
-        with:
-          files: pieront-linux
-          dest: pieront-${{ github.event.inputs.release_tag }}-linux.zip
 
       - name: Download URL
         uses: actions/download-artifact@v2
@@ -78,22 +67,22 @@ jobs:
         with:
           path: upload_url.txt
 
-      - name: Upload Windows CLI Release Asset
+      - name: Upload Windows CLI Release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.url.outputs.content }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: pieront-${{ github.event.inputs.release_tag }}-windows.zip
-          asset_name: pieront-${{ github.event.inputs.release_tag }}-windows.zip
-          asset_content_type: application/zip
+          asset_path: pieront-windows.exe
+          asset_name: pieront-${{ github.event.inputs.release_tag }}-windows.exe
+          asset_content_type: application/x-executable
 
-      - name: Upload Linux CLI Release Asset
+      - name: Upload Linux CLI Release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.url.outputs.content }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: pieront-${{ github.event.inputs.release_tag }}-linux.zip
-          asset_name: pieront-${{ github.event.inputs.release_tag }}-linux.zip
-          asset_content_type: application/zip
+          asset_path: pieront-linux
+          asset_name: pieront-${{ github.event.inputs.release_tag }}-linux
+          asset_content_type: application/x-executable
