--- a/deno.json
+++ b/deno.json
@@ -10,7 +10,7 @@
         "test": "deno run --allow-all --watch test.ts",
         "compile_windows": "deno compile --allow-read --allow-write --allow-net --allow-env --allow-run --target x86_64-pc-windows-msvc -o pieront-windows.exe main.ts",
         "compile_linux": "deno compile --allow-read --allow-write --allow-net --allow-env --allow-run --target x86_64-unknown-linux-gnu -o pieront-linux main.ts",
-        "pm2_linux": "pm2 start pieront-linux --name bot",
-        "setup_linux": "deno task compile_linux && pm2_linux"
+        "pm2_linux": "pm2 start ecosystem.config.json",
+        "setup_linux": "deno task compile_linux && deno task pm2_linux"
     }
 }
